--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/mongoose": "^5.11.97",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
     "mongoose": "^8.1.3",
